# foveran

./: Foveran.cabal  Foveran.hs  README.md  foveran.cabal  stack.yaml
Control/: StreamProcessor.hs
Control/StreamProcessor/: ByteString.hs  DecodeUTF8.hs  Rewindable.hs
Control/StreamReader/: IO.hs
Data/: BooleanAlgebra.hs  FreeMonad.hs  Rec.hs
Foveran/: NameSupply.hs
Foveran/Parsing/: Lexer.hs  Parser.hs  PrettyPrinter.hs  Token.hs
Foveran/Syntax/: Checked.hs  Display.hs  LocallyNameless.hs
Foveran/Typing/: Checker.hs  Context.hs  Conversion.hs  DataDecl.hs  Errors.hs
Text/: CharacterSet.hs  LexerGenerator.hs  ParserCombinators.hs  Position.hs  PrettyPrintPrec.hs  SExpr.hs
Text/Regexp/: DFA.hs  DFATH.hs
elisp/: mode-template.el
experiments/: AdditiveMonadNBE.hs  DelayIdiomNBE.hs  FunctorNBE.hs  IdiomNBE.hs  MonadNBE.hs  MonoidNBE.hs  SimpleNBE.hs
src/Control/: StreamReader.hs
src/Control/StreamProcessor/: Positions.hs
src/Control/StreamReader/: Binary.hs
src/Data/: BooleanAlgebra.hs  CharSet.hs  FiniteStateMachine.hs  FreeMonad.hs  MonadicStream.hs  Pair.hs  RangeSet.hs  Rec.hs  SExpr.hs
src/Data/FiniteStateMachine/: Deterministic.hs  RegexpDerivatives.hs
src/Data/FiniteStateMachine/Deterministic/: Elisp.hs  TH.hs
src/Language/Foveran/: Main.hs  NameSupply.hs  Parsing.hs  Typing.hs
src/Language/Foveran/Editor/: EmacsMode.hs
src/Language/Foveran/Lexing/: ByteString.hs  Spec.hs  Text.hs
src/Language/Foveran/Parsing/: Layout.hs  Lexer.hs  LexicalSpec.hs  Parser.hs  PrettyPrinter.hs  Token.hs
src/Language/Foveran/Syntax/: Checked.hs  Common.hs  Display.hs  Identifier.hs  LocallyNameless.hs
src/Language/Foveran/SyntaxHighlight/: Html.hs
src/Language/Foveran/Typing/: Assume.hs  Checker.hs  Context.hs  Conversion.hs  DataDecl.hs  DeclCheckMonad.hs  Definition.hs  DefinitionContext.hs  Elaboration.hs  Errors.hs  Hole.hs  IDataDecl.hs  LocalContext.hs  Normalise.hs  Program.hs
src/Language/Foveran/Typing/Conversion/: Evaluation.hs  Value.hs
src/Language/Foveran/Util/: Emacs.hs  Html.hs  PrettyPrinting.hs  Templater.hs
src/Text/: Lexeme.hs  ParserCombinators.hs  Position.hs  PrettyPrintPrec.hs  Regexp.hs
src/Text/PrettyPrint/: IsString.hs
src/Text/Regexp/DFA/: Elisp.hs
tests/: arithmetic.fv  binary-search-tree.fv  bool.fv  cata.fv  clocks.fv  comonad.fv  comonad2.fv  complete-induction.fv  cummulativity.fv  data.fv  database.fv  desc.fv  differentiation.fv  eq-types.fv  equality.fv  failure1.fv  failure2.fv  failure3.fv  fin.fv  fin2.fv  finite-types.fv  freeimonad.fv  freemonad.fv  groups.fv  heq.fv  icata.fv  idata.fv  idesc.fv  induction.fv  induction.v  inductors-descript.fv  inductors-nondescript.fv  inductors.fv  inductors2.fv  insertionsort.fv  interpreter.fv  labelled-lists.fv  labelled.fv  lambda.fv  leq.fv  (+47 more)
