Name:          Foveran
Version:       0.0.0.1
Cabal-Version: >= 1.2
License:       BSD3
Author:        Robert Atkey
Synopsis:      A dependently-typed programming language
Build-Type:    Simple

Executable foveran
  Build-Depends: text >= 0.7.1.0,
                 containers >= 0.3.0.0,
                 base >= 4,
                 pretty,
                 th-lift >= 0.3,
                 bytestring >= 0.9.1.5,
                 template-haskell,
                 QuickCheck >= 2.1.0.3,
                 array >= 0.3.0.0,
                 dlist >= 0.5,
                 mtl >= 1.1.0.2
  Main-Is: Foveran.hs
